--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -29,11 +29,14 @@
 
     </script>
 
-    <!-- loads bootstrap.css -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- loads bootstrap css -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
     <!--loads font awesome-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <!--normalize.css-->
     <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
@@ -45,259 +48,56 @@
 <body ng-controller="MainController">
 
 <!--start of nav-->
-<div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <!--button to target the navbar-right which will appear on collapse of navbar items-->
-            <button type="button" class='navbar-toggle collapsed' data-toggle="collapse"
-                    data-target=".navHeaderCollapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-                HarvardClass
-            </a>
-        </div>
-
-        <!--this navbar will be collapsed on mobile-->
-        <div class="collapse navbar-collapse navHeaderCollapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <%= customUsername %> <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#"
-                               class="logoutCustomChat"
-                               ng-click="logoutCustomChat()">Logout from Session
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"
-                               class="logoutHarvardChat"
-                               ng-click="logoutHarvardChat()">Logout from Harvard
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <a type="button"
-               class="btn btn-primary navbar-btn pull-right"
-               href="#myModal"
-               role="button"
-               data-toggle="modal">
-                <i class="fa fa-pencil"></i> New Question
-            </a>
-        </div>
-    </div>
+<div class="ng-cloak">
+    <div top-qa-nav></div>
 </div>
 <!--end of nav-->
 
 
-<!--middle container for news-feed, top voted questions and online users-->
+<!--middle container-->
 <div class="container">
+    <div ng-switch on="tab">
 
-    <div class="row">
-
-        <!--column for newsfeed-->
-        <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12 ng-cloak" ng-controller="QuestionFeedController">
-            <h5>
-                <span>
-                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-                    Question Feed
-                </span>
-                <span class="hidden-sm hidden-md hidden-lg">
-                        <a type="button"
-                           class="btn btn-primary btn-xs pull-right"
-                           href="#myModal"
-                           role="button"
-                           data-toggle="modal">
-                            <i class="fa fa-pencil"></i> New Question
-                        </a>
-                </span>
-            </h5>
-
-
-            <div class="media" ng-repeat="eachQuestion in questions"
-                 ng-class="questionReference[eachQuestion.questionIndex].questionClass">
-                <a class="media-left media-top" href="#">
-                    <p class="userName">{{eachQuestion.senderName}}</p>
-                </a>
-
-                <div class="media-body">
-                    <h4 class="media-heading">{{eachQuestion.heading}}</h4>
-
-                    <p ta-bind ng-model="eachQuestion.question"></p>
-
-                    <small>{{questionReference[eachQuestion.questionIndex].questionTime}}</small>
-
-                    <button type='button'
-                            class="pull-right"
-                            ng-class="questionReference[eachQuestion.questionIndex].buttonClass"
-                            ng-disabled="questionReference[eachQuestion.questionIndex].ifDisabled"
-                            ng-click="upvote(eachQuestion.questionIndex, $event)">
-
-                        <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
-
-                    </button>
-
-                </div>
-
+        <div class="row">
+            <!--questionFeed-->
+            <div ng-switch-when="home" class="ng-cloak">
+                <div question-feed=""></div>
             </div>
+            <!--end of questionFeed-->
 
-        </div>
-        <!--end of newsfeed-->
-
-        <!--start of top voted questions and online column-->
-        <div class="col-lg-5 col-md-4 col-sm-4 col-xs-12" ng-controller="TopVotedController">
-
-            <div class="row">
-                <!--start of top voted questions-->
-                <div class="col-lg-9 col-md-12 col-sm-12 col-xs-8">
-                    <h5 id="trending"><i class="fa fa-line-chart"></i> Trending</h5>
-                    <ul class="list-group">
-                        <li class="list-group-item ng-cloak"
-                            ng-repeat="(key, eachTop) in topVotedQuestions"
-                            ng-class="[
-                            questionReference[eachTop.questionIndex].questionClass,
-                            questionReference[eachTop.questionIndex].listGroupClass
-                            ]"
-                            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
-                            ng-click="upvote(eachTop.questionIndex, $event)">
-                            <span class="badge voteNumber">
-                                {{eachTop.votes}}
-                            </span>
-                            {{eachTop.heading}}
-                        </li>
-                    </ul>
-                </div>
-                <!--end of top voted questions-->
-
-                <!--start of online users-->
-                <div class="col-lg-3 col-md-5 col-sm-5 col-xs-4" style="text-align: center"
-                     ng-controller="OnlineUsersController">
-
-                    <h5><i class="fa fa-users"></i> Users</h5>
-                    <table class="table table-condensed ng-cloak" id="onlineUsers">
-                        <tr ng-repeat="(key, value) in onlineUsers">
-                            <td class='onlineUser userName'><i class='fa fa-user'></i> {{value.customUsername}}</td>
-                        </tr>
-                    </table>
-                </div>
-                <!--end of online users column-->
-
+            <!--start of trending-->
+            <div ng-switch-when="home" class="ng-cloak">
+                <div trending-summary></div>
             </div>
+            <!--end of top voted questions-->
 
+            <!--start of trending-->
+            <div ng-switch-when="trending" class="ng-cloak">
+                <div trending-full></div>
+            </div>
+            <!--end of trending-->
+
+            <!--start of online users-->
+            <div class="ng-cloak">
+                <div online-feed></div>
+            </div>
+            <!--end of online users column-->
         </div>
+
     </div>
-    <!--end of row-->
-
 </div>
 <!--end of mid container-->
 
 
 <!--start of bottom nav-->
-<div class="nav navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <p class="navbar-text pull-left hidden-xs">
-            <i class="fa fa-copyright"></i> 2015 harvardclass.herokuapp.com
-        </p>
-        <ul class="nav navbar-nav pull-right hidden-xs bottom-nav-pills">
-            <li>
-                <a href="#myModal"
-                   data-toggle="modal">
-                    <i class="fa fa-pencil"></i> New Question
-                </a>
-            </li>
-            <li>
-                <a href="#trending">
-                    <i class="fa fa-line-chart"></i> Trending
-                </a>
-            </li>
-            <li>
-                <a href="#onlineUsers"><i class="fa fa-users"></i> Users
-                </a>
-            </li>
-        </ul>
-
-        <div class="span12 text-center">
-            <ul class="nav nav-pills hidden-sm hidden-md hidden-lg bottom-nav-pills">
-                <li>
-                    <a href="#myModal"
-                       data-toggle="modal">
-                        <i class="fa fa-pencil"></i> New
-                    </a>
-                </li>
-                <li>
-                    <a href="#trending">
-                        <i class="fa fa-line-chart"></i> Trending
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a href="#onlineUsers"><i class="fa fa-users"></i> Users
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+<div class="ng-cloak">
+    <div bottom-qa-nav></div>
 </div>
 <!--end of bottom nav-->
 
 
 <!--start of question input modal-->
-<div id="myModal"
-     class="modal fade"
-     tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel"
-     aria-hidden="true"
-     ng-controller="AskController">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header hidden-xs">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">Ask a new question</h3>
-            </div>
-
-            <div class="modal-body">
-                <form name="askForm">
-                    <div class="form-group">
-                        <label for="heading" class="hidden-xs">Heading</label>
-                        <input class="form-control input-sm"
-                               id="heading"
-                               placeholder="Brief heading (10 to 50 chars)"
-                               type="text"
-                               ng-model="theHeading"
-                               required
-                               ng-minlength="10"
-                               ng-maxlength="50">
-                    </div>
-                    <div class="form-group">
-                        <div text-angular
-                             ta-toolbar="[['pre','h6','bold','italics','underline','quote','ul','ol','undo','redo','indent','outdent']]"
-                             ng-model="theQuestion"
-                             required
-                             placeholder="Your question here"></div>
-                    </div>
-                </form>
-
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-                <button type="submit"
-                        class="btn btn-warning pull-right"
-                        ng-click="ask()"
-                        ng-disabled="askForm.$invalid"
-                        data-dismiss="modal">ASK
-                </button>
-                <button type="submit"
-                        class="btn btn-info pull-right"
-                        ng-disabled="askForm.$invalid"
-                        data-dismiss="modal">clarify?
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
+<div question-modal></div>
 <!--end of question input modal-->
 
 
@@ -306,7 +106,7 @@
 <!-- socket.io javascript -->
 <script type="text/javascript" src="socket.io/socket.io.js"></script>
 
-<!-- jQuery -->
+<!-- jquery -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <!--AngularJS SCRIPTS-->
