Fixed overlapping on bottom nav in login. Changed to copyright jbm instad

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -118,7 +118,7 @@
 <div class='navbar navbar-default navbar-fixed-bottom'>
     <div class="container">
         <p class="navbar-text pull-left">
-            Site Built By Jovin Mwilanga:
+            <i class="fa fa-copyright"></i> 2015 jbm
             <a href="https://www.google.com/+JovinMwilanga" target="_blank">
                 <i class="fa fa-google-plus-square"></i>
             </a>
@@ -131,8 +131,8 @@
         </p>
 
         <div class="pull-right">
-            <a class="navbar-btn btn btn-warning btn-xs">Status: Development</a>
-            <a href="#myModal" role="button" class="btn btn-info btn-xs" data-toggle="modal">Shoot Me an Email</a>
+            <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
+            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an Email</a>
         </div>
     </div>
 </div>
