--- a/public/partials/trending.html
+++ b/public/partials/trending.html
@@ -1,44 +1,43 @@
-<div ng-class="columnClass">
-    <div ng-controller="TopVotedController">
-        <h5 id="trending"><i class="fa fa-line-chart"></i> Trending</h5>
-        <ul class="list-group">
-            <li class="list-group-item ng-cloak"
-                ng-repeat="(key, eachTop) in topVotedQuestions"
-                ng-class="[
+<div ng-controller="TopVotedController"
+     ng-class="columnClass">
+    <h5 id="trending"><i class="fa fa-line-chart"></i> Trending</h5>
+    <ul class="list-group">
+        <li class="list-group-item ng-cloak"
+            ng-repeat="(key, eachTop) in topVotedQuestions"
+            ng-class="[
                             questionReference[eachTop.questionIndex].questionClass
                             ]"
-                ng-disabled="questionReference[eachTop.questionIndex].ifDisabled">
+            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled">
                             <span class="badge voteNumber">
                                 {{eachTop.votes}}
                             </span>
-                <h4>{{eachTop.heading}}</h4>
+            <h4>{{eachTop.heading}}</h4>
 
-                <div class="media"
-                     ng-class="questionReference[eachTop.questionIndex].questionClass">
-                    <a class="media-left media-top" href="#">
-                        <p class="userName">{{eachTop.senderName}}</p>
-                    </a>
+            <div class="media"
+                 ng-class="questionReference[eachTop.questionIndex].questionClass">
+                <a class="media-left media-top" href="#">
+                    <p class="userName">{{eachTop.senderName}}</p>
+                </a>
 
-                    <div class="media-body">
+                <div class="media-body">
 
-                        <p ta-bind ng-model="eachTop.question"></p>
+                    <p ta-bind ng-model="eachTop.question"></p>
 
-                        <small>{{questionReference[eachTop.questionIndex].questionTime}}</small>
+                    <small>{{questionReference[eachTop.questionIndex].questionTime}}</small>
 
-                        <button type='button'
-                                class="pull-right"
-                                ng-class="questionReference[eachTop.questionIndex].buttonClass"
-                                ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
-                                ng-click="upvote(eachTop.questionIndex, $event)">
+                    <button type='button'
+                            class="pull-right"
+                            ng-class="questionReference[eachTop.questionIndex].buttonClass"
+                            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
+                            ng-click="upvote(eachTop.questionIndex, $event)">
 
-                            <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
+                        <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
 
-                        </button>
-
-                    </div>
+                    </button>
 
                 </div>
-            </li>
-        </ul>
-    </div>
+
+            </div>
+        </li>
+    </ul>
 </div>
