--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -13,13 +13,14 @@ questions feed
 */
 .main-media {
     border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
 }
 
 .media-body {
     width: 100%;
 }
 
-.upvote {
+.upvote, .promote {
     margin-bottom: 2px;
 }
 
@@ -28,19 +29,26 @@ questions feed
     color: #0b97c4;
 }
 
-.questionTime {
+.questionTime, .commentTime {
     color: darkgray;
 }
 
 /*question input field/modal*/
 .ta-editor {
-    min-height: 300px;
+    min-height: 200px;
     height: auto;
     overflow: auto;
     font-family: inherit;
     font-size: 100%;
-    margin: 20px 0;
+    margin: 10px 0 10px 0;
 }
+
+/*comment input rich text editor*/
+.comment_input {
+    margin: 10px 0 40px 0;
+}
+
+
 
 /*bottom nav bar
 */
