--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -61,9 +61,15 @@
         <div class="row">
             <!--questionFeed-->
             <div ng-switch-when="home" class="ng-cloak">
-                <div question-feed=""></div>
+                <div question-feed></div>
             </div>
             <!--end of questionFeed-->
+
+            <!--questionFull-->
+            <div ng-switch-when="fullQuestion" class="ng-cloak">
+                <div question-full></div>
+            </div>
+            <!--end of questionFull-->
 
             <!--start of trending-->
             <div ng-switch-when="home" class="ng-cloak">
@@ -115,6 +121,8 @@
         src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-animate.min.js"></script>
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-sanitize.min.js"></script>
+<script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 
 
 <!-- Bootstrap.js -->
