temp host shift changes

--- a/public/partials/questionFeed.html
+++ b/public/partials/questionFeed.html
@@ -35,7 +35,7 @@
                     <a type="button"
                        class="btn btn-default btn-xs"
                        ng-click="fullQuestion(eachQuestion.questionIndex)">
-                        <i class="fa fa-plus"></i> Go to conversation
+                        <i class="fa fa-plus"></i> Conversation
                     </a>
                     <button type='button'
                             ng-class="questionReference[eachQuestion.questionIndex].buttonClass"
