--- a/public/partials/online.html
+++ b/public/partials/online.html
@@ -1,4 +1,4 @@
-<div ng-controller="OnlineUsersController"
+<div ng-controller="OnlineCtrl"
      ng-class="columnClass"
      style="text-align: center">
     <h5>Users</h5>
