--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -1,8 +1,8 @@
-<div ng-controller="TopVotedController"
+<div ng-controller="TrendingSummaryCtrl"
      ng-class="columnClass">
     <h5 id="trending"
         ng-click="changeTab('trending')">
-        <a href="#">
+        <a href="#/trendingFull">
             <i class="fa fa-line-chart"></i> Trending
         </a>
     </h5>
