--- a/public/partials/comment_full.html
+++ b/public/partials/comment_full.html
@@ -2,7 +2,9 @@
     <li class="media main-media"
         ng-repeat="eachComment in comments"
         ng-class="cmntsReference[eachComment.commentIndex].commentClass">
-        <a class="media-left media-top" href="#">
+        <a class="media-left media-top"
+           href="#"
+           target="_self">
             <p class="userName">{{eachComment.senderName}}</p>
         </a>
 
@@ -16,8 +18,8 @@
                 <a type="button"
                    ng-class="cmntsReference[eachComment.commentIndex].buttonClass"
                    ng-disabled="cmntsReference[eachComment.commentIndex].ifDisabled"
-                        ng-click="promote(questionOnView, eachComment.commentIndex, eachComment.uniqueId, $event)">
-                    <i class="fa fa-angle-up"></i> Promote
+                   ng-click="promote(questionOnView, eachComment.commentIndex, eachComment.uniqueId, $event)">
+                    <i class="fa fa-angle-up"></i>
                 </a>
             </div>
         </div>
