--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -59,29 +59,13 @@
     <div ng-switch on="tab">
 
         <div class="row">
-            <!--questionFeed-->
-            <div ng-switch-when="home" class="ng-cloak">
-                <div question-feed></div>
-            </div>
-            <!--end of questionFeed-->
+            <div ng-view></div>
 
-            <!--questionFull-->
-            <div ng-switch-when="fullQuestion" class="ng-cloak">
-                <div question-full></div>
-            </div>
-            <!--end of questionFull-->
-
-            <!--start of trending-->
+            <!--start of trending summary-->
             <div ng-switch-when="home" class="ng-cloak">
                 <div trending-summary></div>
             </div>
-            <!--end of top voted questions-->
-
-            <!--start of trending-->
-            <div ng-switch-when="trending" class="ng-cloak">
-                <div trending-full></div>
-            </div>
-            <!--end of trending-->
+            <!--end of trending summary-->
 
             <!--start of online users-->
             <div class="ng-cloak">
@@ -117,6 +101,7 @@
 
 <!--AngularJS SCRIPTS-->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular-route.min.js"></script>
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-animate.min.js"></script>
 <script type="text/javascript"
@@ -140,7 +125,17 @@
 <script type="text/javascript" src="/public/angular_assets/qaApp/mainApp.js"></script>
 <script type="text/javascript" src="/public/angular_assets/qaApp/filters.js"></script>
 <script type="text/javascript" src="/public/angular_assets/qaApp/directives.js"></script>
-<script type="text/javascript" src="/public/angular_assets/qaApp/services.js"></script>
-<script type="text/javascript" src="/public/angular_assets/qaApp/controllers.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services/globals.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services/questionFactory.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services/reference.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services/socketService.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services/commentFactory.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/mainCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/logInOutCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/onlineCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/cmtCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/qCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/onlineCtrl.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers/trendingCtrl.js"></script>
 </body>
 </html>
