Added support for reconnect

--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -1,4 +1,4 @@
-<div ng-controller="TrendingCtrl"
+<div ng-controller="TrendingSummaryCtrl"
      ng-class="columnClass">
     <h5 id="trending"
         ng-click="changeTab('trending')">
