Added animations to work on later

--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -7,7 +7,7 @@
         </a>
     </h5>
     <ul class="list-group">
-        <li class="list-group-item ng-cloak"
+        <li class="list-group-item ng-cloak animate"
             ng-repeat="eachTop in topVotedQuestions"
             ng-class="[
                             questionReference[eachTop.questionIndex].questionClass,
