--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -3,6 +3,33 @@
     display: none !important;
 }
 
+/*ng-animate transitions*/
+/*.animate.ng-enter,*/
+/*.animate.ng-leave {*/
+    /*-webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
+    /*-moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
+    /*-ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
+    /*-o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
+    /*transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;*/
+    /*position: relative;*/
+    /*display: block;*/
+/*}*/
+
+/*.animate.ng-leave.animate.ng-leave-active,*/
+/*.animate.ng-enter {*/
+    /*opacity: 1;*/
+    /*top: 0;*/
+    /*height: 30px;*/
+/*}*/
+
+/*.animate.ng-enter.ng-enter-active,*/
+/*.animate.ng-leave {*/
+    /*opacity: 0;*/
+    /*top: -50px;*/
+    /*height: 0px;*/
+/*}*/
+
+/*body*/
 body {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -58,7 +85,6 @@ body > div.container > div > div > div.ng-scope > div > ul > li.list-group-item 
     padding: 7px;
 }
 
-
 /*bottom nav bar
 */
 .bottom-nav-pills {
@@ -73,10 +99,10 @@ span.hidden-sm.hidden-md.hidden-lg > a:focus {
 }
 
 ul.nav.navbar-nav.pull-right.hidden-xs.bottom-nav-pills > li > a,
-#trending{
+#trending {
     color: #0b97c4;
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
 }
